kustomize/home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/name: home-assistant
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
      app.kubernetes.io/instance: home-assistant
  template:
    metadata:
      labels:
        app.kubernetes.io/name: home-assistant
        app.kubernetes.io/instance: home-assistant
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      containers:
        - image: homeassistant/home-assistant:latest
          name: home-assistant
          ports:
            - containerPort: 8123
              name: http
              protocol: TCP
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 512Mi
          securityContext:
            runAsGroup: 1000
            runAsUser: 1000
          volumeMounts:
            - mountPath: /.cache
              name: tmp-cache
            - mountPath: /.config
              name: tmp-config
            - mountPath: /config
              name: config
            - mountPath: /config/secrets.yaml
              name: secrets
              subPath: secrets.yaml
            - mountPath: /config/serviceAccount.json
              name: secrets
              subPath: serviceAccount.json
      securityContext:
        fsGroup: 1000
      volumes:
        - emptyDir: {}
          name: tmp-cache
        - emptyDir: {}
          name: tmp-config
        - name: config
          persistentVolumeClaim:
            claimName: home-assistant
        - name: secret-files
          secret:
            secretName: home-assistant
        - emptyDir: {}
          name: secrets
